--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -4,12 +4,19 @@
     <i class="fa-solid fa-bars" id="menu-icon"></i>
 
     <nav class="navbar">
-        <a href="http://localhost:8080/">Home</a>
+        <!-- <a href="http://localhost:8080/">Home</a>
         <a href="http://localhost:8080/about">About</a>
         <a href="http://localhost:8080/skills">Skills</a>
         <a href="http://localhost:8080/projects">Projects</a>
         <a href="http://localhost:8080/contact">Contact</a>
-        <a href="http://localhost:8080/services">Services</a>
+        <a href="http://localhost:8080/services">Services</a> -->
+
+        <a href="https://portfolio-og4q.onrender.com/">Home</a>
+        <a href="https://portfolio-og4q.onrender.com/about">About</a>
+        <a href="https://portfolio-og4q.onrender.com/skills">Skills</a>
+        <a href="https://portfolio-og4q.onrender.com/projects">Projects</a>
+        <a href="https://portfolio-og4q.onrender.com/contact">Contact</a>
+        <a href="https://portfolio-og4q.onrender.com/services">Services</a>
     </nav>
 </header>
 
