cleared all the self comments

--- a/views/error.ejs
+++ b/views/error.ejs
@@ -30,7 +30,7 @@
         alert(message);
 
         // Redirect to the "/contact" page after the user clicks "OK"
-        window.location.href = "http://localhost:8080/contact";
+        window.location.href = "https://portfolio-og4q.onrender.com/contact";
     </script>
 </body>
 </html>
