Added Updated Resume

--- a/views/templates/projects.ejs
+++ b/views/templates/projects.ejs
@@ -9,7 +9,7 @@
             <div class="portfolio-layer">
                 <h4>Full-Stack Development</h4>
                 <p>Destination Explorer.</p>
-                <a href="https://wanderlust-jefw.onrender.com/"><i class="fa-solid fa-up-right-from-square"></i></a>
+                <a href="https://destination-explorer.onrender.com/"><i class="fa-solid fa-up-right-from-square"></i></a>
             </div>
         </div>
 
