--- a/views/templates/home.ejs
+++ b/views/templates/home.ejs
@@ -9,7 +9,7 @@
             <a href="https://www.linkedin.com/in/zebakatarki98/"><i class="fa-brands fa-linkedin-in"></i></a>
             <a href="https://github.com/zebakatarki"><i class="fa-brands fa-github"></i></a>
         </div>
-        <a href="#" class="btn">Download CV</a>
+        <a href="ZebaResume.pdf" download class="btn">Download CV</a>
     </div>
 
     <div class="home-img">
