--- a/views/templates/services.ejs
+++ b/views/templates/services.ejs
@@ -7,14 +7,14 @@
                     <i class="fa-solid fa-code"></i>
                     <h3>Full-Stack Development</h3>
                     <p>Seamlessly integrating cutting-edge technologies and robust frameworks,I deliver immersive digital experiences that propel your business forward.</p>
-                    <a href="http://localhost:8080/projects" class="btn">See Projects</a>
+                    <a href="https://portfolio-og4q.onrender.com/projects" class="btn">See Projects</a>
                 </div>
 
                 <div class="services-box">
                     <i class="fa-solid fa-code"></i>
                     <h3>MERN-Stack Development</h3>
                     <p>Harnessing the power of MongoDB, Express.js, React.js, and Node.js, I build dynamic and scalable web applications for your business.</p>
-                    <a href="http://localhost:8080/projects" class="btn">See Projects</a>
+                    <a href="https://portfolio-og4q.onrender.com/projects" class="btn">See Projects</a>
                 </div>
             </div>
         </section>
