--- a/views/templates/home.ejs
+++ b/views/templates/home.ejs
@@ -3,7 +3,7 @@
     <div class="home-content">
         <h3>Hi, I'm</h3>
         <h1>Zeba Katarki</h1>
-        <h3>And I'm a <span class="multiple-text"></span></h3>
+        <h3><span class="multiple-text"></span></h3>
         <p>Mastering the art of full-stack wizardry and MERN sorcery, I enchant web experiences with captivating code and transformative technology.</p>
         <div class="social-media">
             <a href="https://www.linkedin.com/in/zebakatarki98/"><i class="fa-brands fa-linkedin-in"></i></a>
